--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -4,25 +4,25 @@
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
 <div align='left'>[<a href='?c=nodes&a=flush'>更新配置文件</a>]</div>
   <div id="main" class="wid">
-    <table width="657" cellpadding=0 cellspacing=1 id="table">
+    <table width="725" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
-        <td width="88" bgcolor='#efefef' class='color01 right'>名称</td>
-		<td width="81" bgcolor='#efefef' class='color01 right'>主机</td>
-		<td width="81" bgcolor='#efefef' class='color01 right'>端口</td>
-		<td width="81" bgcolor='#efefef' class='color01 right'>用户名</td>
-        <td width="339" bgcolor='#efefef' class='color01 right'>操作</td>
+        <td width="217" bgcolor='#efefef' class='color01 right'>操作</td>
+        <td width="98" bgcolor='#efefef' class='color01 right'>名称</td>
+		<td width="91" bgcolor='#efefef' class='color01 right'>主机</td>
+		<td width="91" bgcolor='#efefef' class='color01 right'>端口</td>
+		<td width="91" bgcolor='#efefef' class='color01 right'>用户名</td>
+		<td width="128" bgcolor='#efefef' class='color01 right'>数据库用户名</td>
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
+        <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=nodes&a=del&name={{$row.name}}';}" title="删除主机"> 删除</a>]
+          [<a href="?c=nodes&a=editForm&name={{$row.name}}" title="更改信息">修改 </a>]
+          [<a href='?c=vhostproduct&a=refreshTemplete&name={{$row.name}}'>初始化</a><a href="?c=vhostproduct&a=exportConfig&name={{$row.name}}"></a>] </td>
         <td class="right">{{$row.name}}</td>
 		<td class="right">{{$row.host}}</td>
 		<td class="right">{{$row.port}}</td>
 		<td class="right">{{$row.user}}</td>
-        <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=nodes&a=del&name={{$row.name}}';}" title="删除主机">
-        删除</a>]
-        [<a href="?c=nodes&a=editForm&name={{$row.name}}" title="更改信息">更改信息
-        </a>]
-		[<a href='?c=vhostproduct&a=refreshTemplete&name={{$row.name}}'>刷新模板</a>][<a href="?c=vhostproduct&a=exportConfig&name={{$row.name}}">导出配置文件</a>] </td>
+		<td class="right">{{$row.db_user}}</td>
       </tr>
 	  {{/foreach}}
     </table>
