--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -1,26 +1,57 @@
 ﻿{{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
+<!-- ajax 查询节点状态 -->
+<script language='javascript' src='{{$PSTATIC}}/style/common.js'>
+</script>
+<script language='javascript'>
+function checkNodeResult()
+{
+	var recv_msg=false;
+	 if (xmlhttp.readyState==4) {
+		if(xmlhttp.status==200){		
+			var dataArray = xmlhttp.responseXML.getElementsByTagName('result');
+			var node = dataArray[0].getAttribute('node');
+			var status = dataArray[0].getAttribute('status');
+			var img = "{{$PSTATIC}}/style/check_error.gif";
+			if(status==1){
+				img = "{{$PSTATIC}}/style/check_right.gif";
+			}
+			xxkf_obj(node).innerHTML = "<img src='" + img + "'/>";
+		}
+	 }
+}
+function checkNode(node)
+{
+	xxkf_obj(node).innerHTML="<img src='{{$PSTATIC}}/style/busy.gif'/>";
+	ajax_open_url('?c=nodes&a=ajaxCheckNode&node=' + node,checkNodeResult);
+}
+</script>
 <div id="container">
 {{$msg}}
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
-<div align='left'>&nbsp;&nbsp;[<a href='?c=nodes&a=flush'>更新配置文件</a>]</div>
+<div align='left'>&nbsp;&nbsp;
+[<a href='?c=nodes&a=flush'>更新配置文件</a>] 
+</div>
   <div id="main" class="wid">
     <table width="725" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
-        <td width="217" bgcolor='#efefef' class='color01 right'>操作</td>
-        <td width="98" bgcolor='#efefef' class='color01 right'>名称</td>
-		<td width="91" bgcolor='#efefef' class='color01 right'>主机</td>
-		<td width="91" bgcolor='#efefef' class='color01 right'>端口</td>
-		<td width="91" bgcolor='#efefef' class='color01 right'>用户名</td>
-		<td width="128" bgcolor='#efefef' class='color01 right'>数据库用户名</td>
-		<td width="128" bgcolor='#efefef' class='color01 right'>物理盘</td>
+        <td bgcolor='#efefef' class='color01 right'>操作</td>
+        <td bgcolor='#efefef' class='color01 right'>状态</td>
+        <td bgcolor='#efefef' class='color01 right'>名称</td>
+		<td bgcolor='#efefef' class='color01 right'>主机</td>
+		<td  bgcolor='#efefef' class='color01 right'>端口</td>
+		<td bgcolor='#efefef' class='color01 right'>用户名</td>
+		<td  bgcolor='#efefef' class='color01 right'>数据库用户名</td>
+		<td  bgcolor='#efefef' class='color01 right'>物理盘</td>
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
         <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=nodes&a=del&name={{$row.name}}';}" title="删除主机"> 删除</a>]
           [<a href="?c=nodes&a=editForm&name={{$row.name}}" title="更改信息">修改 </a>]
           [<a href="javascript:if(confirm('确定初始化{{$row.name}}?')){location='?c=nodes&a=init&name={{$row.name}}';}">初始化</a><a href="?c=vhostproduct&a=exportConfig&name={{$row.name}}"></a>] </td>
-        <td class="right"><a href='http://{{$row.host}}:{{$row.port}}/' target=_blank'>{{$row.name}}</a></td>
+        <td class="right"> <div id='{{$row.name}}'><a href="javascript:checkNode('{{$row.name}}')">查询</a></div></td>
+        <td class="right"><a href='http://{{$row.host}}:{{$row.port}}/' target=_blank'>{{$row.name}}</a>       
+        </td>
 		<td class="right">{{$row.host}}</td>
 		<td class="right">{{$row.port}}</td>
 		<td class="right">{{$row.user}}</td>
