--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -1,13 +1,13 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div>&nbsp;<br></div>
-<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+<div>&nbsp;<br><br></div>
+<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="60%">
 	<tr>
   <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　我的信息</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="120" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="90" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
 	  <tr>
         <td width="200" bgcolor="#f5f5f5" class="color01 right">　用户名:</td>
         <td bgcolor="#fafaf5">{{$role.admin}}</td>
@@ -20,7 +20,7 @@
         <td bgcolor="#f5f5f5" class="color01 right">　最后登录IP:</td>
         <td bgcolor="#fafaf5">{{$smarty.session.admin_last_ip}}</td>
 	  </tr>
-	    </table></td>
+      </table></td>
   </tr>
 </table>
 {{include file='common/foot.html'}}
