--- a/admin/view/default/top.html
+++ b/admin/view/default/top.html
@@ -15,9 +15,9 @@
 <table width="100%" id="t" cellpadding="0" cellspacing="0">
   <tr>
     <td>
-	<table width="100%" cellpadding="0" cellspacing="0" background="{{$STATIC}}/images/bg5.gif">
+	<table width="100%" cellpadding="0" cellspacing="0">
       <tr>
-        <td id="t1" width="100%"><img src="{{$STATIC}}/images/bg6.png"></td>
+        <td id="t1" width="100%">&nbsp;</td>
         <td id="t2" align="right">
 <SCRIPT language="javascript">
 <!--
