--- a/admin/view/default/user/userlist.html
+++ b/admin/view/default/user/userlist.html
@@ -8,8 +8,8 @@
     <input type="submit" name="Submit" value="搜索">
   </form>
   </div>
+  {{if $msg}}<font color='red'>{{$msg}}</font>{{/if}}
   {{if $sum>0}}
-<div class="topimg pal1">共计 {{$sum}} 条记录</div>
   <div id="main" class="wid"> 
     <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
   {{foreach from=$list item=row}}
@@ -21,7 +21,11 @@
 <table width="100%" height="210" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
         <td id="td3" width="189" class="color01 right">操作：</td>
-        <td width="423" id="td4">[<a href="?c=user&a=editForm&username={{$row.username}}" title="更改信息">更改</a>][<a href="?c=user&a=impLogin&username={{$row.username}}" target="_blank">模拟登录</a>]</td>
+        <td width="423" id="td4">
+        [<a href="?c=user&a=editForm&username={{$row.username}}" title="更改信息">更改</a>]
+        [<a href='javascript:if(confirm("真的要重设用户密码吗")){ window.location="?c=user&a=randPassword&username={{$row.username}}";}'>重设密码</a>]
+        [<a href="?c=user&a=impLogin&username={{$row.username}}" target="_blank">模拟登录</a>]
+        </td>
         </tr>
       <tr>
         <td id="td3" class="color01 right">用户名：</td>
