--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -62,7 +62,7 @@ function SwitchMenu(obj,sty)
 	</ol>
 	</h1>
 	<ul class="submenu" id="sub6" >
-		<li><a href="?c=vhostproduct&a=showVhost" target='main'>虚拟主机列表</a></li>	
+		<li><a href="?c=vhost&a=showVhost" target='main'>虚拟主机查询</a></li>	
 		<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 		<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
 	</ul>
