--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -86,13 +86,10 @@ function changeNode()
 			 </select></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　状态</td>
-        <td bgcolor="#fafaf5"><input type="radio" name="state" value="0" {{if $vhostproduct.state==0}} checked {{/if}}>
+        <td bgcolor="#f5f5f5"  class="color01 right">状态</td>
+        <td bgcolor="#fafaf5"><input type="checkbox" name="pause_flag" value="1" {{if $vhostproduct.pause_flag!=0}} checked {{/if}}>
 		  	     暂停销售
-		  	<input type="radio" name="state" value="1" {{if $vhostproduct.state==1}} checked {{/if}}>
-		  	       购买
-		  	<input type="radio" name="state" value="2" {{if $vhostproduct.state==2}} checked {{/if}}>
-		试用</td>
+		  </td>
         </tr>
 	    <tr>
 	    <td height="20" bgcolor="#f5f5f5" colspan="2">
