--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -3,8 +3,16 @@
 <div id="container">
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
   <div id="main" class="wid">
+  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
+  <select name='product_flag' onChange="javascript:product_form.submit();">
+  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
+  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
+  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
+  </select>
+  </form>
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
+          <td class='color01 right' bgcolor='#efefef'>操作</td>
 	   <td class='color01 right' bgcolor='#efefef'>{{$lang.product_id}}</td>
         <td class='color01 right' bgcolor='#efefef'>产品名称</td>
 		<td class='color01 right' bgcolor='#efefef'>空间配额(M)</td>
@@ -14,10 +22,14 @@
 		<td class='color01 right' bgcolor='#efefef'>模板</td>
 		<td class='color01 right' bgcolor='#efefef'>主机</td>
 		<td class='color01 right' bgcolor='#efefef'>状态</td>
-        <td class='color01 right' bgcolor='#efefef'>操作</td>
+    
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
+        <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}" title="删除">
+        删除</a>]
+        [<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">
+        更改</a>]
         <td class="right">{{$row.id}}</td>
 		<td class="right">{{$row.name}}</td>
 		<td class="right">{{$row.web_quota}}</td>
@@ -25,11 +37,7 @@
 		<td class="right">{{$row.price}}</td>
 		<td class="right">{{$row.templete}}</td>
 		<td class="right">{{$row.node}}</td>
-		<td class="right">{{if $row.state==0}}暂停销售{{else if $row.state==1}}购买{{else}}试用{{/if}}</td>
-        <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}}" title="删除">
-        <img src='{{$STATIC}}images/delete.gif' alt='删除' border="0" align="absmiddle"></a>]
-        [<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}" title="更改信息">
-        <img src='{{$STATIC}}images/dot_6.gif' alt='更改' border="0" align="absmiddle"></a>]
+		<td class="right">{{if $row.pause_flag!=0}}暂停销售{{/if}}</td>
         </td>
       </tr>
 	  {{/foreach}}
