--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -1,6 +1,6 @@
 ﻿{{include file='common/head.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000"> 
- <form name="form1" method="post" action="?c=vhostproduct&a=showVhost">
+ <form name="form1" method="post" action="?c=vhost&a=showVhost">
     输入ftp用户名或#uid或域名
     <input name="user" type="text" id="user" value="{{$user}}">
     <input type="submit" name="Submit" value="搜索">
@@ -9,53 +9,65 @@
 
   {{if $row}}
    <div id="main" class="wid"> 
-      <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
-	<tr>
-    <td>
-<table width="100%" height="240" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+  [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重建空间</a>] 
+  [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重设密码</a>] 
+  [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重设数据库密码</a>]
+<table width="80%" height="240" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
       <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">　用户名</td>
+        <td bgcolor="#f5f5f5" width="189" class="color01 right">用户名</td>
         <td width="423" bgcolor="#fafaf5">{{$row.name}}</td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　UID：</td>
+        <td bgcolor="#f5f5f5" class="color01 right">UID：</td>
         <td bgcolor="#fafaf5">{{$row.uid}}</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　所属用户：</td>
-        <td bgcolor="#fafaf5">{{$row.username}}</td>
+        <td bgcolor="#f5f5f5" class="color01 right">所属用户：</td>
+        <td bgcolor="#fafaf5"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
       </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　产品ID</td>
+        <td bgcolor="#f5f5f5" class="color01 right">产品ID</td>
         <td bgcolor="#fafaf5">{{$row.product_id}}</td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　网页大小</td>
+        <td bgcolor="#f5f5f5" class="color01 right">网页大小</td>
         <td bgcolor="#fafaf5"> {{$row.web_quota}}</td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　数据库大小</td>
+        <td bgcolor="#f5f5f5" class="color01 right">数据库大小</td>
         <td bgcolor="#fafaf5">{{$row.db_quota}}</td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　所在服务器</td>
+        <td bgcolor="#f5f5f5"  class="color01 right">所在服务器</td>
         <td bgcolor="#fafaf5">{{$row.node}}</td>
         </tr>
-	    	  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　创建时间</td>
+       <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">路径</td>
+        <td bgcolor="#fafaf5">{{$row.doc_root}}</td>
+        </tr>
+	   <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">创建时间</td>
         <td bgcolor="#fafaf5">{{$row.create_time}}</td>
         </tr>
 			  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　过期时间</td>
+        <td bgcolor="#f5f5f5"  class="color01 right">过期时间</td>
         <td bgcolor="#fafaf5">{{$row.expire_time}}</td>
         </tr>
 			  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　状态</td>
-        <td bgcolor="#fafaf5">{{$row.state}}</td>
+        <td bgcolor="#f5f5f5"  class="color01 right">状态</td>
+        <td bgcolor="#fafaf5">
+        <form action='?c={{$smarty.request.c}}&a=setStatus&user={{$row.name}}' method='post' name='status_form'>
+        <select name='status' onChange="javascript:status_form.submit()">
+        {{for $i=0; $i<10; $i++}}
+        <option value='{{$i}}' {{if $i==$row.status}} selected {{/if}}>
+		 {{$i}}
+		 </option>
+ 		{{/for}}
+ </select>
+ </form>
+ </td>
         </tr>
-    </table></td>
-  </tr>
-</table>
+    </table>
     {{if $list}}
   <table >
   <tr id="ttitle"><td class='color01 right' bgcolor='#efefef'>域名</td><td class='color01 right' bgcolor='#efefef'>目录</td></tr>
