--- a/admin/view/default/moneyin/pagelist.html
+++ b/admin/view/default/moneyin/pagelist.html
@@ -1,18 +1,17 @@
 {{include file='common/head.html'}}
-
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 	<div align="center">
 		<div class="mar_top tb_wid2" align="right">
 			{{if $page>1}}
-			<a href='?c=money_in&a=pageByUser&page=0'>首页</a> 
-			<a href='?c=money_in&a=pageByUser&page={{$page-1}}'>上一页</a> 
+			<a href='?c=moneyin&a=pageMoneyinByStatus&page=0'>首页</a> 
+			<a href='?c=moneyin&a=pageMoneyinByStatus&page={{$page-1}}'>上一页</a> 
 			{{else}}
 			首页 上一页 
 			{{/if}}
 			{{if $page!=$total_page}} 
-			<a href='?c=money_in&a=pageByUser&page={{$page+1}}'>下一页</a>
-			<a href='?c=money_in&a=pageByUser&page={{$total_page}}'>尾页</a>
+			<a href='?c=moneyin&a=pageMoneyinByStatus&page={{$page+1}}'>下一页</a>
+			<a href='?c=moneyin&a=pageMoneyinByStatus&page={{$total_page}}'>尾页</a>
 			{{else}}下一页 尾页
 			{{/if}} 
 			{{$page}}/{{$total_page}}&nbsp;
@@ -24,7 +23,9 @@
 					<td class="td_bgc right_2 tb_wid3" width="130">序号</td>
 					<td class="td_bgc right_2 tb_wid3" width="130">会员账号</td>
 					<td class="td_bgc right_2 tb_wid3" width="130">充值金额</td>
-					<td class="td_bgc right_2 tb_wid3" width="130">充值时间</td>
+					<td class="td_bgc right_2 tb_wid3" width="130">充值开始时间</td>
+					<td class="td_bgc right_2 tb_wid3" width="130">支付成功时间</td>	
+					<td class="td_bgc right_2 tb_wid3" width="130">状态</td>	
 					<td class="td_bgc right_2 tb_wid3" width="130">支付方式</td>	
 				</tr>
 					{{foreach from=$list item=row}}
@@ -33,6 +34,8 @@
 					<td class="td_bgc right_2">{{$row.username}}</td>
 					<td class="td_bgc right_2">{{$row.money}}</td>
 					<td class="td_bgc right_2">{{$row.start_time}}</td>
+					<td class="td_bgc right_2">{{$row.end_time}}</td>
+					<td class="td_bgc right_2">{{if $row.status==1}}成功{{else}}失败{{/if}}</td>
 					<td class="td_bgc right_2">{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
 					</tr>
 					{{/foreach}}
@@ -42,4 +45,4 @@
 	</div>
 </div>
 </body>
-</html>
+
