--- a/user/view/default/money_in/rechargeFrom.html
+++ b/user/view/default/money_in/rechargeFrom.html
@@ -1,9 +1,8 @@
-{{include file='common/head.html'}}
 <div align="center">
-  <form  name='reg' action="?c=money_in&a=add" method='post'>
+  <form  name='reg' action="?c=money_in&a=add" method='post' target='_blank'>
 <div class="head_block tb_wid">&nbsp;在线充值</div>
 <div class="block tb_wid">
-<table id="table_2" cellpadding="0" cellspacing="1">
+ <table id="table_2" cellpadding="0" cellspacing="1">
    
       <tr>
         <td class="td_bgc right_2">支付方式:</td>
@@ -18,7 +17,7 @@
       </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
-		 <input onClick="" type=image src="{{$STATIC}}style/login22.gif" value="确认" />
+		 <input onClick="" type=image value="确认" />
 		</td>
       </tr>
     </table>
