--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -20,20 +20,20 @@
 				<li><a href="?c=session&a=changePasswordForm" target="{{$target}}">修改密码</a></li>
 				<li><a href="?c=session&a=logout" target="_top">退出</a></li>
 			</ul>
-			<!-- 
+			
 			<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu">财务管理</h1>
 			<ul class="submenu" id="sub4" >
-				<li><a href="">充值金额</a></li>	
-				<li><a href="?c=nodes&a=addNode" >消费记录</a></li>
-				<li><a href="?c=nodes&a=addNode" >充值记录</a></li>
+				<li><a href="?c=money_in&a=addFrom" target="{{$target}}">在线充值</a></li>	
+				<li><a href="?c=money_in&a=pageByUser" target="{{$target}}" >消费记录</a></li>
+				<li><a href="?c=money_in&a=pageByUser" target="{{$target}}"">充值记录</a></li>
 				</ul>
-			-->
+		
 			<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu">	
 				我的产品	 
 			</h1>
 			<ul class="submenu" id="sub6" >
 				<li><a href="?c=vhostproduct&a=pageVhostByuser" target="{{$target}}">我的虚拟主机</a></li>
-				<li><a href="?c=money_in&a=addFrom" target="{{$target}}">在线充值</a></li>
+				
 			 </ul>
 		</div>
 		</td>
