--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -74,7 +74,7 @@ function SwitchMenu(obj,sty)
 	</h1>
 	<ul class="submenu" id="sub6" >
 		<li><a href='?c=setting&a=money' target='main'>网上支付</a></li>
-		<li><a href='?c=moneyin&a=pageMoneyinByStatus' target='main'>支付列表</a></li>
+		<li><a href='?c=moneyin&a=pageMoneyin' target='main'>支付列表</a></li>
 		
 	</ul>
 </div>
