--- a/admin/view/default/moneyin/pagelist.html
+++ b/admin/view/default/moneyin/pagelist.html
@@ -4,14 +4,14 @@
 	<div align="center">
 		<div class="mar_top tb_wid2" align="right">
 			{{if $page>1}}
-			<a href='?c=moneyin&a=pageMoneyinByStatus&page=0'>首页</a> 
-			<a href='?c=moneyin&a=pageMoneyinByStatus&page={{$page-1}}'>上一页</a> 
+			<a href='?c=moneyin&a=pageMoneyin&page=0'>首页</a> 
+			<a href='?c=moneyin&a=pageMoneyin&page={{$page-1}}'>上一页</a> 
 			{{else}}
 			首页 上一页 
 			{{/if}}
 			{{if $page!=$total_page}} 
-			<a href='?c=moneyin&a=pageMoneyinByStatus&page={{$page+1}}'>下一页</a>
-			<a href='?c=moneyin&a=pageMoneyinByStatus&page={{$total_page}}'>尾页</a>
+			<a href='?c=moneyin&a=pageMoneyin&page={{$page+1}}'>下一页</a>
+			<a href='?c=moneyin&a=pageMoneyin&page={{$total_page}}'>尾页</a>
 			{{else}}下一页 尾页
 			{{/if}} 
 			{{$page}}/{{$total_page}}&nbsp;
@@ -27,6 +27,7 @@
 					<td class="td_bgc right_2 tb_wid3" width="130">支付成功时间</td>	
 					<td class="td_bgc right_2 tb_wid3" width="130">状态</td>	
 					<td class="td_bgc right_2 tb_wid3" width="130">支付方式</td>	
+					<td class="td_bgc right_2 tb_wid3" width="130">操作</td>	
 				</tr>
 					{{foreach from=$list item=row}}
 				<tr>
@@ -35,8 +36,9 @@
 					<td class="td_bgc right_2">{{$row.money}}</td>
 					<td class="td_bgc right_2">{{$row.start_time}}</td>
 					<td class="td_bgc right_2">{{$row.end_time}}</td>
-					<td class="td_bgc right_2">{{if $row.status==1}}成功{{else}}失败{{/if}}</td>
+					<td class="td_bgc right_2">{{if $row.status==1}}成功{{else}} <font color=red>失败</font>{{/if}}</td>
 					<td class="td_bgc right_2">{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
+					<td class="td_bgc right_2">[<a href='?c=moneyin&a=by_return&id={{$row.id}}'>确认</a>]</td>
 					</tr>
 					{{/foreach}}
 		  </table>
