--- a/user/view/default/vhostproduct/listVhost.html
+++ b/user/view/default/vhostproduct/listVhost.html
@@ -2,7 +2,11 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 	<div align="center">
-		<div class="mar_top tb_wid4" align="right">
+	<table width='70%' align='center'>
+	<form action='?c=vhostproduct&a=pageVhostByuser' method='post'>
+	<tr><td>
+	用户名或域名:<input type='text' name='name' value='{{$name}}'><input type='submit' value='搜索'>
+	</td><td align='right'><div class="mar_top tb_wid4" align="right">
 			{{if $page>1}}
 			<a href='?c=vhostproduct&a=pageVhostByuser&page=0'>首页</a> 
 			<a href='?c=vhostproduct&a=pageVhostByuser&page={{$page-1}}'>上一页</a> 
@@ -16,7 +20,8 @@
 			{{/if}} 
 			{{$page}}/{{$total_page}}&nbsp;
 			共计{{$count}}记录
-			</div>
+			</div></td></tr></form></table>
+	
 			<div class="block tb_wid4">
 				<table id="table" border="0" cellpadding="0" cellspacing="1">
 					<tr id="ttitle">
