--- a/user/view/default/money/moneyout.html
+++ b/user/view/default/money/moneyout.html
@@ -20,18 +20,16 @@
 		</div>
 		<div class="block tb_wid2">
 			<table id="table" border="0" cellpadding="0" cellspacing="1">
-				<tr id="ttitle">
-					
-					<td class="td_bgc right_2 tb_wid3" width="130">充值金额</td>
-					<td class="td_bgc right_2 tb_wid3" width="130">充值时间</td>
-					<td class="td_bgc right_2 tb_wid3" width="130">支付方式</td>	
+				<tr id="ttitle">					
+					<td class="td_bgc right_2 tb_wid3" width="130">消费金额(元)</td>
+					<td class="td_bgc right_2 tb_wid3" width="130">消费时间</td>
+					<td class="td_bgc right_2 tb_wid3" width="130">备注</td>					
 				</tr>
 					{{foreach from=$list item=row}}
 				<tr>
-					
 					<td class="td_bgc right_2">{{$row.money/100}}元</td>
-					<td class="td_bgc right_2">{{$row.start_time}}</td>
-					<td class="td_bgc right_2">{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
+					<td class="td_bgc right_2">{{$row.add_time}}</td>
+					<td class="td_bgc right_2">{{$row.mem}}</td>
 					</tr>
 					{{/foreach}}
 		  </table>
