--- a/user/view/default/vhostproduct/upgrade.html
+++ b/user/view/default/vhostproduct/upgrade.html
@@ -17,7 +17,7 @@ function changeProduct()
 </script>
 <div align="center">
   <form name='upgrade' action="?c=product&a=upgrade&name={{$name}}&product_type=vhost" method="post">
-<div class="head_block tb_wid">&nbsp;升级虚拟主机</div>
+<div class="head_block tb_wid">&nbsp;升级虚拟主机 {{$name}}</div>
 <div class="block tb_wid">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
