--- a/admin/view/default/setting/show.html
+++ b/admin/view/default/setting/show.html
@@ -1,15 +1,16 @@
+{{include file='common/head.html'}}
 {{if $msg}}
 <div align="center">
-<div class="block tb_wid2 mar_top" align="center"> 
- <font color='red'>{{$msg}}</font>
-</div>
+	<div class="block tb_wid2 mar_top" align="center"> 
+		<font color='red'>{{$msg}}</font>
+	</div>
 </div>
 {{/if}}
 <div><br /></div>
 <div align="center">
 	<div class="block tb_wid2">
-	<form action='?c=setting&a=set&sub={{$sub}}' method='post'>
-		<table id="table_2" cellpadding="0" cellspacing="1">		
+		<table id="table_2" cellpadding="0" cellspacing="1">
+			<form action='?c=setting&a=set&sub={{$sub}}' method='post'>
 			{{foreach item=e from=$env}}				
 			<tr>	
 				<td class="td_bgc right_2">{{$lang[$e.name]}}</td>
@@ -26,12 +27,15 @@
 					CHECKBOX
 					{{/if}}
 				</td>
-				</tr>
+			</tr>
 			{{/foreach}}
-			<tr><td colspan="2">
-				<input type='submit' value='设置'>						
-			</td></tr>	
+			<tr>
+				<td colspan="2" class="td_bgc td_hg" align="center">
+					<input type='submit' value='设置'>						
+				</td>
+			</tr>
+			</form>	
 		</table>
-		</form>	
 	</div>
 </div>
+{{include file='common/foot.html'}}
