--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -58,7 +58,7 @@ function changeNode(id,templete)
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
           <td class='color01 right' bgcolor='#efefef'>操作</td>
-	   <td class='color01 right' bgcolor='#efefef'>{{$lang.product_id}}</td>
+	   <td class='color01 right' bgcolor='#efefef' width="60">{{$lang.product_id}}</td>
         <td class='color01 right' bgcolor='#efefef'>产品名称</td>
         <td class='color01 right' bgcolor='#efefef'>主机</td>
 		<td class='color01 right' bgcolor='#efefef'>空间(M)</td>
