--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -22,71 +22,69 @@
   <div align="center">
 <div class="head_block tb_wid2">&nbsp;产品信息</div>
 <div class="block tb_wid2">
-<table id="table_2" cellpadding="0" cellspacing="1">
-		 <tr>
-        <td class="td_bgc td_hg" colspan="2" align="center">
-        [<a href='javascript:if(confirm("真的要删除空间吗,为将导致数据无法恢复,如果你想关闭空间，可以把该空间的状态改为非0")){ window.location="?c=vhost&a=del&name={{$row.name}}";}'>删除空间</a>]
-		[<a href='?c={{$smarty.request.c}}&a=resync&name={{$row.name}}'>重建空间</a>] 
-        [<a href='javascript:if(confirm("真的要重设用户密码吗")){ window.location="?c={{$smarty.request.c}}&a=randPassword&name={{$row.name}}";}'>重设密码</a>] 
-        [<a href='javascript:if(confirm("真的要重设数据库密码吗")){ window.location="?c={{$smarty.request.c}}&a=randDbPassword&name={{$row.name}}";}'>重设数据库密码</a>]
-		[<a href='?c={{$smarty.request.c}}&a=impLogin&name={{$row.name}}'>控制面板</a>]</td>
-          </tr>
-      <tr>
-        <td class="td_bgc right_2">用户名</td>
-        <td class="td_bgc right_2">{{$row.name}}</td>
-        </tr>
-      <tr>
-        <td class="td_bgc right_2">UID：</td>
-        <td class="td_bgc right_2">{{$row.uid}}</td>
-      </tr>
-      <tr>
-        <td class="td_bgc right_2">所属用户：</td>
-        <td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
-      </tr>
-	  <tr>
-        <td class="td_bgc right_2">产品名称</td>
-        <td class="td_bgc right_2">{{$row.product_name}}</td>
-	  </tr>
-	  <tr>
-        <td class="td_bgc right_2">模板</td>
-        <td class="td_bgc right_2">{{$row.templete}}:{{$row.sub_templete}}</td>
-	  </tr>
-	   <tr>
-        <td class="td_bgc right_2">所在服务器</td>
-        <td class="td_bgc right_2">{{$row.node}}</td>
-        </tr>
-       <tr>
-        <td class="td_bgc right_2">路径</td>
-        <td class="td_bgc right_2">{{$row.doc_root}}</td>
-        </tr>
-	   <tr>
-        <td class="td_bgc right_2">创建时间</td>
-        <td class="td_bgc right_2">{{$row.create_time}}</td>
-        </tr>
-			  <tr>
-        <td class="td_bgc right_2">过期时间</td>
-        <td class="td_bgc right_2">{{$row.expire_time}}</td>
-        </tr>
-			  <tr>
-        <td class="td_bgc right_2">状态</td>
-        <td class="td_bgc right_2">
-        <form action='?c={{$smarty.request.c}}&a=setStatus&name={{$row.name}}' method='post' name='status_form'>
-        <select name='status' onChange="javascript:status_form.submit()">
-        {{for $i=0; $i<10; $i++}}
-        <option value='{{$i}}' {{if $i==$row.status}} selected {{/if}}>
-		 {{$i}}
-		 </option>
- 		{{/for}}
- </select>
- </form>
- </td></tr>
-</table>
+	<table id="table_2" cellpadding="0" cellspacing="1">
+	<tr>
+		<td class="td_bgc td_hg" colspan="2" align="center">
+			[<a href='javascript:if(confirm("真的要删除空间吗,为将导致数据无法恢复,如果你想关闭空间，可以把该空间的状态改为非0")){ window.location="?c=vhost&a=del&name={{$row.name}}";}'>删除空间</a>]
+			[<a href='?c={{$smarty.request.c}}&a=resync&name={{$row.name}}'>重建空间</a>] 
+			[<a href='javascript:if(confirm("真的要重设用户密码吗")){ window.location="?c={{$smarty.request.c}}&a=randPassword&name={{$row.name}}";}'>重设密码</a>] 
+			[<a href='javascript:if(confirm("真的要重设数据库密码吗")){ window.location="?c={{$smarty.request.c}}&a=randDbPassword&name={{$row.name}}";}'>重设数据库密码</a>]
+			[<a href='?c={{$smarty.request.c}}&a=impLogin&name={{$row.name}}'>控制面板</a>]
+		</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">UID：</td>
+		<td class="td_bgc right_2">{{$row.uid}}</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">所属用户：</td>
+		<td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">产品名称</td>
+		<td class="td_bgc right_2">{{$row.product_name}}</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">模板</td>
+		<td class="td_bgc right_2">{{$row.templete}}:{{$row.sub_templete}}</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">所在服务器</td>
+		<td class="td_bgc right_2">{{$row.node}}</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">路径</td>
+		<td class="td_bgc right_2">{{$row.doc_root}}</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">创建时间</td>
+		<td class="td_bgc right_2">{{$row.create_time}}</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">过期时间</td>
+		<td class="td_bgc right_2">{{$row.expire_time}}</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">状态</td>
+		<td class="td_bgc right_2">
+			<form action='?c={{$smarty.request.c}}&a=setStatus&name={{$row.name}}' method='post' name='status_form'>
+			<select name='status' onChange="javascript:status_form.submit()">
+			{{for $i=0; $i<10; $i++}}
+			<option value='{{$i}}' {{if $i==$row.status}} selected {{/if}}>
+			{{$i}}
+			</option>
+			{{/for}}
+			</select>
+			</form>
+		</td>
+	</tr>
+	</table>
 </div>
 <div><br></div>
     {{if $list}}
 <div class="head_block tb_wid2">&nbsp;域名绑定目录</div>
 <div class="block tb_wid2">
-<table id="table_2" cellpadding="0" cellspacing="1">
+	<table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">域名</td>
         <td class="td_bgc right_2">目录</td></tr>
@@ -96,7 +94,7 @@
         <td class="td_bgc right_2">{{$row.value}}</td></tr>
 		  {{/foreach}}
           {{/if}}
-     </table>
+   </table>
 	 </div>
    {{/if}}
 </div>
