--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -73,13 +73,14 @@ function SwitchMenu(obj,sty)
 	<ol id="p7">系统设置</ol>
 	</h1>
 	<ul class="submenu" id="sub6" >
-		<li><a href='?c=setting&a=setFrom' target='main'>网上支付设置</a></li>
+		<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
 	 	</ul>
 	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu">
 	<ol id="p8">财务管理</ol>
 	</h1>
 	<ul class="submenu" id="sub8" >
-		<li><a href='?c=moneyin&a=pageMoneyin' target='main'>支付列表</a></li>
+		<li><a href='?c=moneyin&a=pageMoneyin' target='main'>充值列表</a></li>
+		<li><a href='?c=moneyin&a=pageMoneyout' target='main'>消费列表</a></li>
 </div>
 </td></tr>
 </table>
