--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -46,7 +46,7 @@
 	</tr>
 	<tr>
 		<td class="td_bgc right_2">模板</td>
-		<td class="td_bgc right_2">{{$row.templete}}:{{$row.sub_templete}}</td>
+		<td class="td_bgc right_2">{{$row.templete}}:{{$row.subtemplete}}</td>
 	</tr>
 	<tr>
 		<td class="td_bgc right_2">所在服务器</td>
