--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -168,7 +168,7 @@ img{margin:0;padding:0;border:0;}
 	<table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
 	<form id="form1" name="form1" method="post" action="?c=session&a=login&refer=web" >
 		<tr><td colspan="2">
-				{{if $role.user}}{{$role.user}},您好!  [<a href='user/?c=frame&a=index&fc=user&fa=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]{{else}}
+				{{if $role.user}}{{$role.user}},您好!  [<a href='?c=user&a=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]{{else}}
 				用户名:
 				<input name="username" type="text" size="12" />
 				密码:
