--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -128,7 +128,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="?c=public&a=showProductFrom"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
@@ -178,7 +178,7 @@
 										  <tr><td class="right">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>/年</td></tr>
 										  <tr><td class="right_r" colspan="2"><a href="user/frame.php?c=frame&a=index&fc=product&fa=sellForm&product=vhost_{{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
-										  	<a href="/user/frame.php?c=frame&a=index&fc=product&fa=pageListProduct"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  	<a href="?c=public&a=showProductFrom"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 										  </tr>
 									 </table>
 								  </td>	
